--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "eslint": "^4.9.0",
+    "handlebars": "^4.0.11",
     "hapi": "^16.6.2",
     "inert": "^4.2.1",
+    "install": "^0.10.1",
+    "jade": "^1.11.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
