--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "url": "git://github.com/username/repository.git"
   },
   "dependencies": {
+    "boom": "^7.1.1",
     "eslint": "^4.9.0",
+    "good": "^7.3.0",
+    "good-console": "^6.4.0",
+    "good-file": "^6.0.1",
+    "good-http": "^6.1.3",
+    "good-squeeze": "^5.0.2",
     "handlebars": "^4.0.11",
     "hapi": "^16.6.2",
     "inert": "^4.2.1",
