--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git://github.com/username/repository.git"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "boom": "^7.1.1",
     "eslint": "^4.9.0",
     "good": "^7.3.0",
@@ -23,6 +24,7 @@
     "good-squeeze": "^5.0.2",
     "handlebars": "^4.0.11",
     "hapi": "^16.6.2",
+    "hapi-auth-cookie": "^7.0.0",
     "inert": "^4.2.1",
     "install": "^0.10.1",
     "jade": "^1.11.0",
