--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "install": "^0.10.1",
     "jade": "^1.11.0",
     "joi": "^13.0.2",
+    "lodash": "^4.17.4",
     "uuid": "^3.1.0",
     "vision": "^4.1.1"
   },
