--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hapi-auth-cookie": "^7.0.0",
     "inert": "^4.2.1",
     "install": "^0.10.1",
+    "iron": "^5.0.4",
     "jade": "^1.11.0",
     "joi": "^13.0.2",
     "lodash": "^4.17.4",
